Fix: Tweak container sizes and other spacing matters

--- a/packages/comet-canvas/style.scss
+++ b/packages/comet-canvas/style.scss
@@ -7,6 +7,10 @@
  * Text Domain:     comet
  */
 
+main.page-section {
+	padding-block: 0;
+}
+
 .page-with-sidebar {
 	container-type: inline-size;
 
